--- a/index.html
+++ b/index.html
@@ -55,15 +55,33 @@
         <div class="cards">
             <div class="card">
                 <img src="images/sets.jpg" alt="сеты">
-                <p>Сеты</p>
+                <div>
+                    <p>Сеты</p>
+                </div>
+            </div>
+            <div class="card mw768">
+                <img src="images/rolls.jpg" alt="сеты">
+                <div>
+                    <p>Роллы</p>
+                </div>
             </div>
             <div class="card">
-                <img src="images/thai-food.jpg" alt="супы">
-                <p>Супы</p>
+                <img src="images/sups.jpg" alt="супы">
+                <div>
+                    <p>Супы</p>
+                </div>
             </div>
             <div class="card">
                 <img src="images/sushi.jpg" alt="суши">
-                <p>Суши</p>
+                <div>
+                    <p>Суши</p>
+                </div>
+            </div>
+            <div class="card mw576">
+                <img src="images/thai-food.jpg" alt="супы">
+                <div>
+                    <p>Тайская еда</p>
+                </div>
             </div>
         </div>
         <div class="points">
@@ -73,8 +91,8 @@
         </div>
     </section>
     <section id="we-offer">
-        <div class="container sushimaki">
-            <h1>Мы предлагаем</h1>
+        <h1>Мы предлагаем</h1>
+        <div class="container">
             <div class="card sushimaki">
                 <img src="images/sushimak.jpg" alt="суши">
                 <div class="text">
