--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
         </div>
     </section>
     <section id="reviews">
+        <h1>Отзывы</h1>
         <div class="container">
-            <h1>Отзывы</h1>
+
             <div class="card">
                 <div class="review">
                     <p class="name">Надежда Р.</p>
@@ -140,19 +141,69 @@
                     </svg>
                 </div>
             </div>
-            <div class="points">
-                <div class="point active"></div>
-                <div class="point passive"></div>
-                <div class="point active"></div>
+            <div class="card mw576">
+                <div class="review">
+                    <p class="name">Надежда Р.</p>
+                    <br>
+                    <p class="text">Заказывали впервые в день рождения, гости остались довольны. Спасибо большое!... </p>
+                </div>
+                <div class="stars">
+                    <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.0903 0L7.45766 4.93713H11.8825L8.30273 7.98844L9.67009 12.9256L6.0903 9.87426L2.51051 12.9256L3.87787 7.98844L0.29808 4.93713H4.72294L6.0903 0Z" fill="#E11514"/>
+                    </svg>
+                    <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.0903 0L7.45766 4.93713H11.8825L8.30273 7.98844L9.67009 12.9256L6.0903 9.87426L2.51051 12.9256L3.87787 7.98844L0.29808 4.93713H4.72294L6.0903 0Z" fill="#E11514"/>
+                    </svg>
+                    <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.0903 0L7.45766 4.93713H11.8825L8.30273 7.98844L9.67009 12.9256L6.0903 9.87426L2.51051 12.9256L3.87787 7.98844L0.29808 4.93713H4.72294L6.0903 0Z" fill="#E11514"/>
+                    </svg>
+                    <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.0903 0L7.45766 4.93713H11.8825L8.30273 7.98844L9.67009 12.9256L6.0903 9.87426L2.51051 12.9256L3.87787 7.98844L0.29808 4.93713H4.72294L6.0903 0Z" fill="#E11514"/>
+                    </svg>
+                    <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.0903 0L7.45766 4.93713H11.8825L8.30273 7.98844L9.67009 12.9256L6.0903 9.87426L2.51051 12.9256L3.87787 7.98844L0.29808 4.93713H4.72294L6.0903 0Z" fill="white"/>
+                    </svg>
+                </div>
             </div>
-            <p>Ждем Ваших заказов!</p>
+            <div class="card mw768">
+                <div class="review">
+                    <p class="name">Надежда Р.</p>
+                    <br>
+                    <p class="text">Заказывали впервые в день рождения, гости остались довольны. Спасибо большое!... </p>
+                </div>
+                <div class="stars">
+                    <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.0903 0L7.45766 4.93713H11.8825L8.30273 7.98844L9.67009 12.9256L6.0903 9.87426L2.51051 12.9256L3.87787 7.98844L0.29808 4.93713H4.72294L6.0903 0Z" fill="#E11514"/>
+                    </svg>
+                    <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.0903 0L7.45766 4.93713H11.8825L8.30273 7.98844L9.67009 12.9256L6.0903 9.87426L2.51051 12.9256L3.87787 7.98844L0.29808 4.93713H4.72294L6.0903 0Z" fill="#E11514"/>
+                    </svg>
+                    <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.0903 0L7.45766 4.93713H11.8825L8.30273 7.98844L9.67009 12.9256L6.0903 9.87426L2.51051 12.9256L3.87787 7.98844L0.29808 4.93713H4.72294L6.0903 0Z" fill="#E11514"/>
+                    </svg>
+                    <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.0903 0L7.45766 4.93713H11.8825L8.30273 7.98844L9.67009 12.9256L6.0903 9.87426L2.51051 12.9256L3.87787 7.98844L0.29808 4.93713H4.72294L6.0903 0Z" fill="#E11514"/>
+                    </svg>
+                    <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.0903 0L7.45766 4.93713H11.8825L8.30273 7.98844L9.67009 12.9256L6.0903 9.87426L2.51051 12.9256L3.87787 7.98844L0.29808 4.93713H4.72294L6.0903 0Z" fill="white"/>
+                    </svg>
+                </div>
+            </div>
+
         </div>
+        <div class="points">
+            <div class="point active"></div>
+            <div class="point passive"></div>
+            <div class="point active"></div>
+        </div>
+        <p>Ждем Ваших заказов!</p>
     </section>
 </main>
 <footer>
     <div class="container">
         <div class="card">
-            <div></div>
+            <div class="text"></div>
+            <div class="creator">Powered by Anri</div>
         </div>
     </div>
 </footer>
