--- a/index.html
+++ b/index.html
@@ -202,7 +202,35 @@
 <footer>
     <div class="container">
         <div class="card">
-            <div class="text"></div>
+            <div class="text">
+                <div class="columns">
+                    <div class="our-contacts">
+                        <h1>Наши контакты</h1>
+                        <a href="tel:+37355532805" class="phone-number"><img src="images/phone.svg">+373 (555) 32805</a>
+                        <a href="mailto:zakaz@rssushi.org?subject=zakaz@rssushi.org"><img src="images/mail.svg">zakaz@rssushi.org</a>
+                        <a href="#" class="city"><img src="images/place.svg" >г. Тирасполь</a>
+                        <a href="#" class="address"><img src="images/place.svg">ул. Суворова 25а</a>
+                    </div>
+                    <div class="info">
+                        <h1>Информация</h1>
+                        <a href="#">Вакансии</a>
+                        <a href="#">О нас</a>
+                        <a href="#">Оплата и доставка</a>
+                        <a href="#">Политика безопасности</a>
+                    </div>
+                    <div class="call-us">
+                        <h1>Звоните нам!</h1>
+                        <a href="tel:+37355532805" class="phone-number">+373 (555) 32805</a>
+                        <div class="social-network">
+                            <a href="#"><img src="images/header-social-network/instagram.svg" alt="instagram"></a>
+                            <a href="#"><img src="images/header-social-network/viber.svg" alt="viber"></a>
+                            <a href="#"><img src="images/header-social-network/whatsapp.svg" alt="whatsapp"></a>
+                            <a href="#"><img src="images/header-social-network/facebook.svg" alt="facebook"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="rules">Все права защищены. 2020</div>
+            </div>
             <div class="creator">Powered by Anri</div>
         </div>
     </div>
